# SoftwareEngA1

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  cred.yaml  models.py  pyproject.toml  sonar-project.properties  tables.py  utils.py
.github/workflows/: python-tests.yml
models/: machines.py  products.py  stocks.py  time_stamp.py
static/: openapi.yaml
tests/: conftest.py  test_app.py  test_machine_route.py  test_product_route.py  test_time_stamp_route.py  test_utils.py
