[tool.poetry]
name = "a1"
version = "0.1.0"
description = ""
authors = ["YanggggAng <yanga262@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.20.0"
flake8 = "^5.0.1"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"
flake8-annotations = "^2.9.1"
flake8-eradicate = "^1.4.0"
pytest = "^7.2.1"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.3"
pymysql = "^1.0.2"
mysqlclient = "^2.1.1"
flask-wtf = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
